hard-gists/7002279/run.log
=== Docker Run Log for 7002279 ===
Started at: Mi 29. Okt 16:57:17 CET 2025

[2025-10-29 16:57:17] START: Running container for 7002279
[2025-10-29 16:57:17] SUCCESS: Container 2f42c8bc835d742a5763cda1ffc2487ee413034a1083144f86a20b77ea26fbf8 started for 7002279
=== Container logs for 7002279 ===
  File "/snippet.py", line 72
    print sender, receiver, title, content
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7002279 ===
[2025-10-29 16:57:19] INFO: Container 2f42c8bc835d742a5763cda1ffc2487ee413034a1083144f86a20b77ea26fbf8 has stopped
